feat: add for now some of the kits